#46 - thuongbsls2004 fix overlap swiper

--- a/public/custom/css/swiper.css
+++ b/public/custom/css/swiper.css
@@ -8,5 +8,6 @@
   height: 400px;
   width: auto;
   margin-top: 5px;
+  overflow: hidden;
 }
 
